tambah maps, animasi, whatsapp

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Dusun Wonosobo 1</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 <body>
   <header>
@@ -18,6 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#profil">Profil</a></li>
+            <li class="nav-item"><a class="nav-link" href="#galer">Galeri</a></li>
             <li class="nav-item"><a class="nav-link" href="#umkm">UMKM</a></li>
             <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
           </ul>
@@ -26,12 +30,12 @@
     </nav>
   </header>
 
-  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <!-- <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
+    </div> -->
     <div class="carousel-fixed-text position-absolute top-50 start-50 translate-middle text-white text-center z-2">
       <h2>Selamat Datang di Dusun Wonosobo 1</h2>
       <p>Menggali potensi lokal dan memberdayakan UMKM desa</p>
@@ -60,40 +64,131 @@
     </button>
   </div>
 
-  <section id="profil" class="profil">
-    <h2>Profil Dusun</h2>
-    <p>Dusun Wonosobo 1 terletak di kawasan perbukitan dengan pemandangan yang asri. Mayoritas penduduk bermata pencaharian sebagai petani dan pengrajin. Warga hidup rukun dan menjunjung nilai-nilai kearifan lokal.</p>
+  <section id="profil" class="profil" data-aos="fade-up" data-aos-duration="1000">
+    <h2>Profil Padukuhan</h2>
+    <p>Padukuhan Wonosobo 1 merupakan salah satu dusun di Desa Banjarejo, Kecamatan Tanjungsari, Kabupaten Gunungkidul. Terletak di kawasan perbukitan yang sejuk dan asri, dusun ini dihuni oleh masyarakat yang menjunjung tinggi nilai kebersamaan dan kearifan lokal. Sebagian besar penduduk bermata pencaharian sebagai petani, peternak, dan pengrajin.
+      Selain itu, Padukuhan Wonosobo 1 juga memiliki potensi besar dalam pengembangan UMKM dan desa wisata, terutama karena lokasinya yang strategis dekat dengan jalur wisata pantai selatan. Kehidupan masyarakat yang harmonis serta kekayaan budaya dan alamnya menjadikan dusun ini sebagai salah satu potensi unggulan di wilayah Banjarejo.</p>
   </section>
 
-  <section id="umkm" class="umkm">
-    <h2>UMKM Unggulan</h2>
-    <div class="umkm-list">
-      <div class="umkm-item">
-        <h3>Kopi Wonosobo</h3>
-        <p>Kopi robusta dan arabika asli dari petani lokal yang diolah secara tradisional.</p>
+  <section class="container my-5" data-aos="fade-up">
+    <h2 class="text-center mb-4">Lokasi Dusun Wonosobo 1</h2>
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d698.251591788101!2d110.58745609044334!3d-8.110902407245431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bb1b7e85def01%3A0x76757d7fbc4e6ee3!2sBalai%20Padukuhan%20Wonosobo%20I!5e0!3m2!1sid!2sid!4v1752952610901!5m2!1sid!2sid"
+              width="600"
+              height="450"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </section>
+
+  <section id="galeri" class="container my-5" data-aos="fade-up">
+    <h2 class="text-center mb-4">Galeri Kegiatan</h2>
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <img src="assets/kegiatan1.jpg" class="img-fluid rounded shadow" alt="Kegiatan 1">
       </div>
-      <div class="umkm-item">
-        <h3>Kerajinan Bambu</h3>
-        <p>Produk anyaman bambu seperti keranjang dan perabot rumah tangga.</p>
+      <div class="col-md-4 mb-3">
+        <img src="assets/kegiatan2.jpg" class="img-fluid rounded shadow" alt="Kegiatan 2">
       </div>
-      <div class="umkm-item">
-        <h3>Keripik Kentang</h3>
-        <p>Keripik kentang khas Wonosobo yang gurih dan renyah.</p>
+      <div class="col-md-4 mb-3">
+        <video controls class="w-100 rounded shadow">
+          <source src="assets/video-dusun.mp4" type="video/mp4">
+          Browser Anda tidak mendukung video.
+        </video>
       </div>
     </div>
   </section>
 
-  <section id="kontak" class="kontak">
-    <h2>Kontak Kami</h2>
-    <p>Email: info@wonosobo1.desa.id</p>
-    <p>Telepon: +62 812-3456-7890</p>
+  <section id="umkm" class="umkm container py-5" data-aos="fade-up" data-aos-duration="1000">
+    <h2 class="text-center mb-4">UMKM Unggulan</h2>
+
+    <!-- UMKM 1 -->
+    <div class="row align-items-center mb-5" data-aos="fade-up" data-aos-duration="1000">
+      <div class="col-md-6">
+        <div id="carouselUMKM1" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/IMG20250711153522.jpg" class="d-block w-100 rounded" alt="Kopi Wonosobo">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/IMG20250711153632.jpg" class="d-block w-100 rounded" alt="Kopi Wonosobo">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/IMG_1930.jpg" class="d-block w-100 rounded" alt="Kopi Wonosobo">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/IMG_1935.jpg" class="d-block w-100 rounded" alt="Kopi Wonosobo">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/IMG20250711153621.jpg" class="d-block w-100 rounded" alt="Kopi Wonosobo">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h3>Kopi Wonosobo</h3>
+        <p>Kopi robusta dan arabika asli dari petani lokal yang diolah secara tradisional.</p>
+        <strong>Kontak:</strong>
+        <p><strong><a href="https://wa.me/6282208243838" target="_blank" class="wa-link wa-hover">
+          <i class="bi bi-whatsapp text-success"></i> 082208243838</a></strong>
+        </p>
+      </div>
+    </div>
+
+    <!-- UMKM 2 -->
+    <div class="row align-items-center flex-md-row-reverse mb-5" data-aos="fade-up" data-aos-duration="1000">
+      <div class="col-md-6">
+        <div id="carouselUMKM2" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/IMG20250711152954.jpg" class="d-block w-100 rounded" alt="Kerajinan Bambu">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/IMG20250711153651.jpg" class="d-block w-100 rounded" alt="Kerajinan Bambu">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h3>Kerajinan Bambu</h3>
+        <p>Produk anyaman bambu seperti keranjang dan perabot rumah tangga.</p>
+        <strong>Kontak:</strong>
+        <p><strong><a href="https://wa.me/6282208243838" target="_blank" class="wa-link wa-hover">
+          <i class="bi bi-whatsapp text-success"></i> 082208243838</a></strong>
+        </p>
+        
+      </div>
+    </div>
+
+    <!-- UMKM 3 -->
+    <!-- <div class="row align-items-center mb-5">
+      <div class="col-md-6">
+        <div id="carouselUMKM3" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/kentang1.jpg" class="d-block w-100 rounded" alt="Keripik Kentang">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/kentang2.jpg" class="d-block w-100 rounded" alt="Keripik Kentang">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h3>Keripik Kentang</h3>
+        <p>Keripik kentang khas Wonosobo yang gurih dan renyah.</p>
+        <p><strong>Kontak:</strong> 0812-3456-7890</p>
+      </div>
+    </div> -->
   </section>
 
   <footer>
     <p>&copy; 2025 Dusun Wonosobo 1. All rights reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
