ubah layout sedikit, tambah galeri proker dan footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dusun Wonosobo 1</title>
+    <link rel="icon" href="assets\Logo_KKN-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -21,9 +22,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#profil">Profil</a></li>
-            <li class="nav-item"><a class="nav-link" href="#galer">Galeri</a></li>
             <li class="nav-item"><a class="nav-link" href="#umkm">UMKM</a></li>
-            <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
+            <li class="nav-item"><a class="nav-link" href="#galeri">Galeri</a></li>
           </ul>
         </div>
       </div>
@@ -64,7 +64,7 @@
     </button>
   </div>
 
-  <section id="profil" class="profil" data-aos="fade-up" data-aos-duration="1000">
+  <section id="profil" class="profil my-5" data-aos="fade-up" data-aos-duration="1000">
     <h2>Profil Padukuhan</h2>
     <p>Padukuhan Wonosobo 1 merupakan salah satu dusun di Desa Banjarejo, Kecamatan Tanjungsari, Kabupaten Gunungkidul. Terletak di kawasan perbukitan yang sejuk dan asri, dusun ini dihuni oleh masyarakat yang menjunjung tinggi nilai kebersamaan dan kearifan lokal. Sebagian besar penduduk bermata pencaharian sebagai petani, peternak, dan pengrajin.
       Selain itu, Padukuhan Wonosobo 1 juga memiliki potensi besar dalam pengembangan UMKM dan desa wisata, terutama karena lokasinya yang strategis dekat dengan jalur wisata pantai selatan. Kehidupan masyarakat yang harmonis serta kekayaan budaya dan alamnya menjadikan dusun ini sebagai salah satu potensi unggulan di wilayah Banjarejo.</p>
@@ -83,25 +83,7 @@
     </div>
   </section>
 
-  <section id="galeri" class="container my-5" data-aos="fade-up">
-    <h2 class="text-center mb-4">Galeri Kegiatan</h2>
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <img src="assets/kegiatan1.jpg" class="img-fluid rounded shadow" alt="Kegiatan 1">
-      </div>
-      <div class="col-md-4 mb-3">
-        <img src="assets/kegiatan2.jpg" class="img-fluid rounded shadow" alt="Kegiatan 2">
-      </div>
-      <div class="col-md-4 mb-3">
-        <video controls class="w-100 rounded shadow">
-          <source src="assets/video-dusun.mp4" type="video/mp4">
-          Browser Anda tidak mendukung video.
-        </video>
-      </div>
-    </div>
-  </section>
-
-  <section id="umkm" class="umkm container py-5" data-aos="fade-up" data-aos-duration="1000">
+  <section id="umkm" class="umkm container py-5 my-5" data-aos="fade-up" data-aos-duration="1000">
     <h2 class="text-center mb-4">UMKM Unggulan</h2>
 
     <!-- UMKM 1 -->
@@ -131,7 +113,7 @@
         <h3>Kopi Wonosobo</h3>
         <p>Kopi robusta dan arabika asli dari petani lokal yang diolah secara tradisional.</p>
         <strong>Kontak:</strong>
-        <p><strong><a href="https://wa.me/6282208243838" target="_blank" class="wa-link wa-hover">
+        <p><strong><a href="https://wa.me/6282208243838" target="_blank" class="icon-link icon-hover">
           <i class="bi bi-whatsapp text-success"></i> 082208243838</a></strong>
         </p>
       </div>
@@ -155,7 +137,7 @@
         <h3>Kerajinan Bambu</h3>
         <p>Produk anyaman bambu seperti keranjang dan perabot rumah tangga.</p>
         <strong>Kontak:</strong>
-        <p><strong><a href="https://wa.me/6282208243838" target="_blank" class="wa-link wa-hover">
+        <p><strong><a href="https://wa.me/6282208243838" target="_blank" class="icon-link icon-hover">
           <i class="bi bi-whatsapp text-success"></i> 082208243838</a></strong>
         </p>
         
@@ -184,9 +166,221 @@
     </div> -->
   </section>
 
-  <footer>
+  <!-- PROKER KELOMPOK -->
+  <section id="proker" class="proker my-5" data-aos="fade-up" data-aos-duration="1000">
+    <h2 class="text-center mb-4">Program Kerja Kelompok</h2>
+    <div class="scroll-section">
+
+      <div class="scroll-item">
+        <h5 class="text-center">Senam Bersama</h5>
+        <div class="proker-layout">
+          <!-- Carousel Kiri -->
+          <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets\Senam\IMG-20250714-WA0113.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0126.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0065.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+
+          <!-- Video Tengah -->
+          <video autoplay muted loop playsinline>
+            <source src="assets\Senam\VID-20250714-WA0051.mp4" type="video/mp4">
+            Browser Anda tidak mendukung video.
+          </video>
+
+          <!-- Carousel Kanan -->
+          <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets\Senam\IMG-20250714-WA0136.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0085.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0095.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="scroll-item">
+        <h5 class="text-center">Bahasa Inggris</h5>
+        <div class="proker-layout">
+          <!-- Carousel Kiri -->
+          <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets\Basing\IMG_1984.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Basing\IMG_1983.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Basing\IMG_1982.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+
+          <!-- Video Tengah -->
+          <video autoplay muted loop playsinline>
+            <source src="assets\Basing\PROKER BASING.mp4" type="video/mp4">
+            Browser Anda tidak mendukung video.
+          </video>
+
+          <!-- Carousel Kanan -->
+          <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets\Basing\IMG_1963.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Basing\IMG_1960.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Basing\IMG_1955.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tambahkan scroll-item lainnya sesuai kebutuhan -->
+
+    </div>
+  </section>
+
+  <!-- PROKER INDIVIDU -->
+  <section class="my-5" data-aos="fade-up" data-aos-duration="1000">
+    <h2 class="text-center mb-4">Program Kerja Individu</h2>
+    <div class="scroll-section">
+
+      <div class="scroll-item">
+        <h5 class="text-center">Sosialisasi Kebersihan</h5>
+        <div class="proker-layout">
+          <!-- Carousel Kiri -->
+          <div id="carouselIndiv1Left" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets/i1a.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/i1b.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+
+          <!-- Video Tengah -->
+          <video autoplay muted loop playsinline>
+            <source src="assets/video2.mp4" type="video/mp4">
+            Browser Anda tidak mendukung video.
+          </video>
+
+          <!-- Carousel Kanan -->
+          <div id="carouselIndiv1Right" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets/i1c.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/i1d.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="scroll-item">
+        <h5 class="text-center">Senam Bersama</h5>
+        <div class="proker-layout">
+          <!-- Carousel Kiri -->
+          <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets\Senam\IMG-20250714-WA0113.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0126.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0065.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+
+          <!-- Video Tengah -->
+          <video autoplay muted loop playsinline>
+            <source src="assets\Senam\VID-20250714-WA0051.mp4" type="video/mp4">
+            Browser Anda tidak mendukung video.
+          </video>
+
+          <!-- Carousel Kanan -->
+          <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner proker-carousel">
+              <div class="carousel-item active">
+                <img src="assets\Senam\IMG-20250714-WA0136.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0085.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets\Senam\IMG-20250714-WA0095.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tambahkan scroll-item lainnya sesuai kebutuhan -->
+
+    </div>
+  </section>
+
+  <!-- <footer>
     <p>&copy; 2025 Dusun Wonosobo 1. All rights reserved.</p>
+  </footer> -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <!-- Kolom 1: Nama/Logo -->
+        <div class="col-md-4 mb-3">
+          <img src="assets\Logo_KKN-removebg-preview.png" alt="Logo KKN" width="100">
+          <p class="mt-2">KKN 30 Wonosobo 1</p>
+          <p>Universitas Atma Jaya Yogyakarta</p>
+        </div>
+
+        <!-- Kolom 2: Kontak -->
+        <div class="col-md-4 mb-3">
+          <h5>Kontak</h5>
+          <ul class="list-unstyled">
+            <li><i class="bi bi-geo-alt-fill me-2"></i> Desa Contoh, Kecamatan X</li>
+            <li><i class="bi bi-envelope-fill me-2"></i> dusunwonosobo1@gmail.com</li>
+            <li><i class="bi bi-whatsapp me-2"></i> <a href="https://wa.me/6281234567890" class="text-dark text-decoration-none">+62 812-3456-7890</a></li>
+          </ul>
+        </div>
+
+        <!-- Kolom 3: Sosial Media -->
+        <div class="col-md-4 mb-3">
+          <h5>Ikuti Kami</h5>
+          <a href="https://www.instagram.com/wonosobo1_kkn87uajy/" class="text-dark me-3 icon-link icon-hover"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.tiktok.com/@wonosobo1_kkn87uajy" class="text-dark icon-link icon-hover"><i class="bi bi-tiktok"></i></a>
+        </div>
+      </div>
+
+      <div class="text-center pt-3 border-top mt-3">
+        <small>© 2025 Dusun Wonosobo 1. All rights reserved.</small>
+      </div>
+    </div>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
