--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Dusun Wonosobo I</title>
     <link rel="icon" href="assets\Logo_KKN-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -20,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="#profil">Profil</a></li>
+            <li class="nav-item"><a class="nav-link" href="#map">Profil</a></li>
             <li class="nav-item"><a class="nav-link" href="#umkm">UMKM</a></li>
             <li class="nav-item"><a class="nav-link" href="#proker">Galeri</a></li>
           </ul>
@@ -63,8 +66,7 @@
   <section id="umkm" class="umkm container" data-aos="fade-up" data-aos-duration="1000">
     <h2 class="text-center mb-4">UMKM Wonosobo I</h2>
 
-    <!-- UMKM 1 -->
-    <div class="row align-items-center mb-5" data-aos="fade-up" data-aos-duration="1000">
+    <div class="umkm-card row align-items-center mb-5" data-aos="fade-up" data-aos-duration="1000">
       <div class="col-md-6">
         <div id="carouselUMKM1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -103,7 +105,6 @@
         <p>Toko Pangestu berawal dari kecintaan kami terhadap kekayaan kuliner lokal dan keinginan untuk
           menyajikannya dalam bentuk camilan yang praktis, higienis, dan lezat. Kami fokus pada pembuatan aneka keripik dan peyek dengan bahan-bahan unik yang diolah sepenuh hati.</p>
         
-        <!-- Accordion Produk -->
         <div class="accordion" id="accordionUMKM1">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingMain1">
@@ -114,9 +115,7 @@
             <div id="collapseMain1" class="accordion-collapse collapse" aria-labelledby="headingMain1" data-bs-parent="#accordionUMKM1">
               <div class="accordion-body">
 
-                <!-- Nested Accordion -->
                 <div class="accordion" id="nestedAccordion1">
-                  <!-- Produk 1 -->
                   <div class="accordion-item" data-target-slide="wader">
                     <h2 class="accordion-header" id="nestedHeading1a">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse1a" aria-expanded="false" aria-controls="nestedCollapse1a">
@@ -130,7 +129,6 @@
                     </div>
                   </div>
 
-                  <!-- Produk 2 -->
                   <div class="accordion-item" data-target-slide="rumputlaut">
                     <h2 class="accordion-header" id="nestedHeading1b">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse1b" aria-expanded="false" aria-controls="nestedCollapse1b">
@@ -144,7 +142,6 @@
                     </div>
                   </div>
 
-                  <!-- Produk 3 -->
                   <div class="accordion-item" data-target-slide="kakap">
                     <h2 class="accordion-header" id="nestedHeading1c">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse1c" aria-expanded="false" aria-controls="nestedCollapse1c">
@@ -158,7 +155,6 @@
                     </div>
                   </div>
 
-                  <!-- Produk 4 -->
                   <div class="accordion-item" data-target-slide="peyek">
                     <h2 class="accordion-header" id="nestedHeading1d">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse1d" aria-expanded="false" aria-controls="nestedCollapse1d">
@@ -172,8 +168,7 @@
                     </div>
                   </div>
 
-                <!-- Produk 5 -->
-                  <div class="accordion-item" data-target-slide="peyek">
+                <div class="accordion-item" data-target-slide="peyek">
                     <h2 class="accordion-header" id="nestedHeading1e">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse1e" aria-expanded="false" aria-controls="nestedCollapse1e">
                         Peyek Rebon
@@ -186,9 +181,7 @@
                     </div>
                   </div>
                 </div>
-                <!-- End Nested Accordion -->
-
-              </div>
+                </div>
             </div>
           </div>
         </div>
@@ -199,8 +192,7 @@
       </div>
     </div>
 
-    <!-- UMKM 2 -->
-    <div class="row align-items-center flex-md-row-reverse mb-5" data-aos="fade-up" data-aos-duration="1000">
+    <div class="umkm-card row align-items-center flex-md-row-reverse mb-5" data-aos="fade-up" data-aos-duration="1000">
       <div class="col-md-6">
         <div id="carouselUMKM2" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -236,7 +228,6 @@
         <p>Rumah Produksi Mentari adalah produsen aneka makanan beku (frozen food) dan camilan berkualitas. Kami percaya bahwa makanan lezat berawal dari bahan baku terbaik.
           Oleh karena itu, semua produk kami dibuat dengan cinta, menggunakan bahan-bahan segar pilihan dan diolah secara higienis tanpa bahan pengawet.</p>
 
-        <!-- Accordion Produk -->
         <div class="accordion" id="accordionUMKM2">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingMain2">
@@ -247,9 +238,7 @@
             <div id="collapseMain2" class="accordion-collapse collapse" aria-labelledby="headingMain2" data-bs-parent="#accordionUMKM2">
               <div class="accordion-body">
 
-                <!-- Nested Accordion -->
                 <div class="accordion" id="nestedAccordion2">
-                  <!-- Produk 1 -->
                   <div class="accordion-item" data-target-slide="tahu">
                     <h2 class="accordion-header" id="nestedHeading2a">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse2a" aria-expanded="false" aria-controls="nestedCollapse2a">
@@ -263,7 +252,6 @@
                     </div>
                   </div>
 
-                  <!-- Produk 2 -->
                   <div class="accordion-item" data-target-slide="naga">
                     <h2 class="accordion-header" id="nestedHeading2b">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse2b" aria-expanded="false" aria-controls="nestedCollapse2b">
@@ -277,7 +265,6 @@
                     </div>
                   </div>
 
-                  <!-- Produk 3 -->
                   <div class="accordion-item" data-target-slide="keripik">
                     <h2 class="accordion-header" id="nestedHeading2c">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse2c" aria-expanded="false" aria-controls="nestedCollapse2c">
@@ -290,9 +277,7 @@
                       </div>
                     </div>
                   </div>
-                <!-- End Nested Accordion -->
-
-              </div>
+                </div>
             </div>
           </div>
         </div>
@@ -304,7 +289,6 @@
     </div>
   </section>
 
-  <!-- PROKER KELOMPOK -->
   <section id="proker" class="proker mb-0" data-aos="fade-up" data-aos-duration="1000">
     <h2 class="text-center mb-4">Program Kerja KKN UAJY</h2>
     <div class="scroll-section">
@@ -312,7 +296,6 @@
       <div class="scroll-item">
         <h5 class="text-center">Senam Bersama</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -327,13 +310,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Senam\VID-20250714-WA0051.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -353,7 +334,6 @@
       <div class="scroll-item">
         <h5 class="text-center">Bahasa Inggris</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -368,13 +348,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Basing\IMG_1951.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -394,7 +372,6 @@
       <div class="scroll-item">
         <h5 class="text-center">Seni Budaya</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -409,13 +386,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Proker Seni Budaya\Seni Budaya.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -435,14 +410,12 @@
     </div>
   </section>
 
-  <!-- PROKER INDIVIDU -->
   <section class="mt-0 mb-1" data-aos="fade-up" data-aos-duration="1000">
     <div class="scroll-section">
 
       <div class="scroll-item">
         <h5 class="text-center">Cek Tekanan Darah</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselIndiv1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -457,13 +430,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Proker Putri\Proker Putri.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselIndiv1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -483,7 +454,6 @@
       <div class="scroll-item">
         <h5 class="text-center">Pelatihan CV dan Aplikasi Pencari Kerja</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -498,13 +468,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Proker Johan, Tesa dan Timo\VID-20250715-WA0021.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -524,7 +492,6 @@
       <div class="scroll-item">
         <h5 class="text-center">Sosialisasi Mengenal dan Mencegah Klaim Palsu Pinjaman Online</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -539,13 +506,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Proker Johan, Tesa dan Timo\VID-20250715-WA0030.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -565,7 +530,6 @@
       <div class="scroll-item">
         <h5 class="text-center">Sosialisasi Hoax dan Keamanan Data Pribadi</h5>
         <div class="proker-layout mt-4">
-          <!-- Carousel Kiri -->
           <div id="carouselGroup1Left" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -580,13 +544,11 @@
             </div>
           </div>
 
-          <!-- Video Tengah -->
           <video autoplay muted loop playsinline>
             <source src="assets\Proker Johan, Tesa dan Timo\VID-20250715-WA0044.mp4" type="video/mp4">
             Browser Anda tidak mendukung video.
           </video>
 
-          <!-- Carousel Kanan -->
           <div id="carouselGroup1Right" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner proker-carousel">
               <div class="carousel-item active">
@@ -608,37 +570,26 @@
 
   <footer>
     <div class="container">
-      <div class="row">
-        <!-- Kolom 1: Nama/Logo -->
-        <div class="col-md-4 mb-2">
-          <img src="assets\Logo_KKN-removebg-preview.png" alt="Logo KKN" width="100">
+      <div class="row text-center text-md-start"> <div class="col-md-4 mb-4 mb-md-0"> <img src="assets\Logo_KKN-removebg-preview.png" alt="Logo KKN" width="100">
           <p class="mt-2">KKN 30 Wonosobo I</p>
           <p>Universitas Atma Jaya Yogyakarta</p>
         </div>
 
-        <!-- Kolom 2: Kontak -->
-        <div class="col-md-4 mb-2">
-          <!-- <h5>Kontak</h5>
-          <ul class="list-unstyled">
-            <li><i class="bi bi-geo-alt-fill me-2"></i> Desa Contoh, Kecamatan X</li>
-            <li><i class="bi bi-envelope-fill me-2"></i> dusunwonosobo1@gmail.com</li>
-            <li><i class="bi bi-whatsapp me-2"></i> <a href="https://wa.me/6281234567890" class="text-dark text-decoration-none">+62 812-3456-7890</a></li>
-          </ul> -->
+        <div class="col-md-4 mb-4 mb-md-0">
         </div>
 
-        <!-- Kolom 3: Sosial Media -->
-        <div class="col-md-4 mb-2">
+        <div class="col-md-4">
           <h5>Ikuti Kami</h5>
           <a href="https://www.instagram.com/wonosobo1_kkn87uajy/" class="text-dark me-3 icon-link icon-hover"><i class="bi bi-instagram"></i></a>
           <a href="https://www.tiktok.com/@wonosobo1_kkn87uajy" class="text-dark icon-link icon-hover"><i class="bi bi-tiktok"></i></a>
         </div>
       </div>
 
-      <div class="text-center pt-3 border-top">
-        <small>© 2025 Dusun Wonosobo I. All rights reserved.</small>
+      <div class="text-center pt-3 mt-3 border-top"> <small>© 2025 Dusun Wonosobo I. All rights reserved.</small>
       </div>
     </div>
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
