--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="#map">Profil</a></li>
+            <li class="nav-item"><a class="nav-link" href="#profil">Profil</a></li>
             <li class="nav-item"><a class="nav-link" href="#umkm">UMKM</a></li>
             <li class="nav-item"><a class="nav-link" href="#proker">Galeri</a></li>
           </ul>
@@ -43,25 +43,98 @@
         Selain itu, Padukuhan Wonosobo I juga memiliki potensi besar dalam pengembangan UMKM dan desa wisata, terutama karena lokasinya yang strategis dekat dengan jalur wisata pantai selatan. Kehidupan masyarakat yang harmonis serta kekayaan budaya dan alamnya menjadikan dusun ini sebagai salah satu potensi unggulan di wilayah Banjarejo.
       </p>
     </div>
-    <a href="#map" class="arrow-down">
+    <a href="#profil" class="arrow-down">
       <i class="bi bi-chevron-compact-down"></i>
     </a>
   </div>
 
+  <section class="container" id="profil" data-aos="fade-up" data-aos-duration="1000">
+  <div class="text-center mb-5">
+    <h2 class="fw-bold">Profil Dusun Wonosobo I</h2>
+    <p class="text-muted">Mengenal lebih dekat Dusun Wonosobo I, Desa Banjarejo.</p>
+  </div>
 
-  <section class="container" id="map" data-aos="fade-up" data-aos-duration="1000">
-    <h2 class="text-center mb-4">Lokasi Dusun Wonosobo I</h2>
-    <div class="ratio ratio-16x9">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.612836359736!2d110.58463617482207!3d-8.111049291918107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bb1b7e85def01%3A0x76757d7fbc4e6ee3!2sBalai%20Padukuhan%20Wonosobo%20I!5e1!3m2!1sid!2sid!4v1753091230764!5m2!1sid!2sid"
-          width="600"
-          height="450"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+  <div class="sejarah mb-5">
+    <h4 class="text-center mb-4">Sejarah Singkat</h4>
+    <p>
+      Wonosobo I adalah sebuah padukuhan yang kaya akan nilai-nilai kebersamaan dan kearifan lokal. Berdiri sejak puluhan tahun lalu, dusun ini telah menjadi saksi bisu perkembangan masyarakat di Desa Banjarejo. Nama "Wonosobo" sendiri dipercaya memiliki makna mendalam yang berkaitan dengan harapan akan kemakmuran di tengah kawasan hutan ('Wono') yang subur. Dari generasi ke generasi, warga Wonosobo I terus menjaga tradisi gotong royong dan semangat kekeluargaan, menjadikan dusun ini sebagai tempat yang nyaman dan damai untuk ditinggali.
+    </p>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <h5 class="card-title text-center fw-bold mb-3">Struktur Pemerintahan</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Dukuh
+              <span class="badge bg-primary rounded-pill">Bapak Mugiraharjo</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Ketua RW 01
+              <span class="badge bg-primary rounded-pill">Bapak [Nama Ketua RW]</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Ketua RT 01
+              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Ketua RT 02
+              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Ketua RT 03
+              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Ketua RT 04
+              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Karang Taruna
+              <span class="badge bg-secondary rounded-pill">Sdr [Nama Ketua Karang Taruna]</span>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </section>
+
+    <div class="col-md-6 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <h5 class="card-title text-center fw-bold mb-3">Data & Fasilitas</h5>
+          <h6><strong>Demografi</strong></h6>
+          <ul class="list-group list-group-flush mb-3">
+            <li class="list-group-item">Jumlah Penduduk: <strong>~[Jumlah] Jiwa</strong></li>
+            <li class="list-group-item">Jumlah KK: <strong>~[Jumlah] KK</strong></li>
+            <li class="list-group-item">Mata Pencaharian Utama: <strong>Petani, Nelayan, Wirausaha</strong></li>
+          </ul>
+          <h6><strong>Fasilitas Umum</strong></h6>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">1 Balai Padukuhan</li>
+            <li class="list-group-item">1 Masjid</li>
+            <li class="list-group-item">2 Pos Kamling</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="lokasi mt-5">
+    <h2 class="text-center mb-4">Lokasi Dusun Wonosobo I</h2>
+    <div class="ratio ratio-16x9 rounded" style="overflow: hidden;">
+      <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.612836359736!2d110.58463617482207!3d-8.111049291918107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bb1b7e85def01%3A0x76757d7fbc4e6ee3!2sBalai%20Padukuhan%20Wonosobo%20I!5e1!3m2!1sid!2sid!4v1753091230764!5m2!1sid!2sid"
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
+
+</section>
 
   <section id="umkm" class="umkm container" data-aos="fade-up" data-aos-duration="1000">
     <h2 class="text-center mb-4">UMKM Wonosobo I</h2>
