Update product name and description in accordion
Changed 'Tahu Bakso Ikan' to 'Tahu Tuna' and updated the corresponding description to reflect tuna filling instead of fish ball. Also removed AOS animation attributes from a section element.

--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
                   <div class="accordion-item" data-target-slide="tahu">
                     <h2 class="accordion-header" id="nestedHeading2a">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse2a" aria-expanded="false" aria-controls="nestedCollapse2a">
-                        Tahu Bakso Ikan
+                        Tahu Tuna
                       </button>
                     </h2>
                     <div id="nestedCollapse2a" class="accordion-collapse collapse" aria-labelledby="nestedHeading2a" data-bs-parent="#nestedAccordion2">
                       <div class="accordion-body">
-                        Perpaduan sempurna antara tahu pilihan yang lembut di luar dengan isian bakso ikan segar yang gurih dan kenyal di dalam. Tahu Bakso Ikan Mentari sangat praktis, bisa langsung dikukus untuk sajian sehat atau digoreng untuk tekstur yang lebih renyah. Pilihan lauk bergizi dan lezat untuk seluruh keluarga.
+                        Perpaduan sempurna antara tahu pilihan yang lembut di luar dengan isian ikan tuna segar yang gurih dan kenyal di dalam. Tahu Tuna Mentari sangat praktis, bisa langsung dikukus untuk sajian sehat atau digoreng untuk tekstur yang lebih renyah. Pilihan lauk bergizi dan lezat untuk seluruh keluarga.
                       </div>
                     </div>
                   </div>
@@ -483,7 +483,7 @@
     </div>
   </section>
 
-  <section class="mt-0 mb-1" data-aos="fade-up" data-aos-duration="1000">
+  <section class="mt-0 mb-1">
     <div class="scroll-section">
 
       <div class="scroll-item">
