Revamp dusun profile section and update assets
Removed unused images and video assets, added a new photo for the dukuh, and redesigned the dusun profile section in index.html. Introduced a dedicated 'Profil Dukuh' card with photo and quote, and added a statistics bar for population, families, and main occupations. Updated style.css with new styles for the profile card and statistics bar, including mobile optimizations.

--- a/index.html
+++ b/index.html
@@ -49,92 +49,87 @@
   </div>
 
   <section class="container" id="profil" data-aos="fade-up" data-aos-duration="1000">
-  <div class="text-center mb-5">
-    <h2 class="fw-bold">Profil Dusun Wonosobo I</h2>
-    <p class="text-muted">Mengenal lebih dekat Dusun Wonosobo I, Desa Banjarejo.</p>
-  </div>
+    <div class="text-center mb-5">
+      <h2 class="fw-bold">Profil Dusun Wonosobo I</h2>
+      <p class="text-muted">Mengenal lebih dekat Dusun Wonosobo I, Desa Banjarejo.</p>
+    </div>
 
-  <div class="sejarah mb-5">
-    <h4 class="text-center mb-4">Sejarah Singkat</h4>
-    <p>
-      Wonosobo I adalah sebuah padukuhan yang kaya akan nilai-nilai kebersamaan dan kearifan lokal. Berdiri sejak puluhan tahun lalu, dusun ini telah menjadi saksi bisu perkembangan masyarakat di Desa Banjarejo. Nama "Wonosobo" sendiri dipercaya memiliki makna mendalam yang berkaitan dengan harapan akan kemakmuran di tengah kawasan hutan ('Wono') yang subur. Dari generasi ke generasi, warga Wonosobo I terus menjaga tradisi gotong royong dan semangat kekeluargaan, menjadikan dusun ini sebagai tempat yang nyaman dan damai untuk ditinggali.
-    </p>
-  </div>
+    <div class="sejarah mb-5">
+      <h4 class="text-center mb-4">Sejarah Singkat</h4>
+      <p>
+        Wonosobo I adalah sebuah padukuhan yang kaya akan nilai-nilai kebersamaan dan kearifan lokal. Berdiri sejak puluhan tahun lalu, dusun ini telah menjadi saksi bisu perkembangan masyarakat di Desa Banjarejo. Nama "Wonosobo" sendiri dipercaya memiliki makna mendalam yang berkaitan dengan harapan akan kemakmuran di tengah kawasan hutan ('Wono') yang subur. Dari generasi ke generasi, warga Wonosobo I terus menjaga tradisi gotong royong dan semangat kekeluargaan, menjadikan dusun ini sebagai tempat yang nyaman dan damai untuk ditinggali.
+      </p>
+    </div>
 
-  <div class="row">
-    <div class="col-md-6 mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h5 class="card-title text-center fw-bold mb-3">Struktur Pemerintahan</h5>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Dukuh
-              <span class="badge bg-primary rounded-pill">Bapak Mugiraharjo</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Ketua RW 01
-              <span class="badge bg-primary rounded-pill">Bapak [Nama Ketua RW]</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Ketua RT 01
-              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Ketua RT 02
-              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Ketua RT 03
-              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Ketua RT 04
-              <span class="badge bg-info text-dark rounded-pill">Bapak [Nama Ketua RT]</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Karang Taruna
-              <span class="badge bg-secondary rounded-pill">Sdr [Nama Ketua Karang Taruna]</span>
-            </li>
-          </ul>
+    <div class="profil-dukuh my-5">
+      <h4 class="text-center mb-4">Profil Dukuh</h4>
+      <div class="card p-4">
+        <div class="row g-4 align-items-center">
+          <div class="col-md-4 text-center">
+            <img src="assets/dukuh.jpg" class="profil-dukuh-img rounded-circle shadow-sm" alt="Foto Kepala Dusun">
+          </div>
+          <div class="col-md-8">
+            <h5 class="fw-bold">Mugi Raharjo</h5>
+            <p class="text-muted mb-2">Dukuh Wonosobo I</p>
+            <blockquote class="blockquote mb-0">
+              <p class="fs-6 fst-italic">"Dengan semangat kebersamaan dan gotong royong, mari kita wujudkan Dusun Wonosobo I yang maju, sejahtera, dan berbudaya. Kami menyambut hangat setiap inisiatif dan kolaborasi yang bertujuan untuk membangun dusun kita bersama. Potensi alam dan kreativitas warga adalah modal utama kita untuk terus berkembang."</p>
+            </blockquote>
+          </div>
         </div>
       </div>
     </div>
+  </section>
 
-    <div class="col-md-6 mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h5 class="card-title text-center fw-bold mb-3">Data & Fasilitas</h5>
-          <h6><strong>Demografi</strong></h6>
-          <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item">Jumlah Penduduk: <strong>~[Jumlah] Jiwa</strong></li>
-            <li class="list-group-item">Jumlah KK: <strong>~[Jumlah] KK</strong></li>
-            <li class="list-group-item">Mata Pencaharian Utama: <strong>Petani, Nelayan, Wirausaha</strong></li>
-          </ul>
-          <h6><strong>Fasilitas Umum</strong></h6>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">1 Balai Padukuhan</li>
-            <li class="list-group-item">1 Masjid</li>
-            <li class="list-group-item">2 Pos Kamling</li>
-          </ul>
+  <section class="stats-bar">
+    <div class="container-fluid">
+      <div class="row">
+        
+        <div class="col-md-4">
+          <div class="stats-item" data-aos="fade-up" data-aos-delay="100">
+            <div class="stats-icon">
+              <i class="bi bi-people-fill"></i>
+            </div>
+            <p class="stats-title">Jumlah Penduduk</p>
+            <p class="stats-number">420 Jiwa</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="stats-item" data-aos="fade-up" data-aos-delay="200">
+            <div class="stats-icon">
+              <i class="bi bi-house-heart-fill"></i>
+            </div>
+            <p class="stats-title">Jumlah Keluarga</p>
+            <p class="stats-number">155 KK</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="stats-item" data-aos="fade-up" data-aos-delay="300">
+            <div class="stats-icon">
+              <i class="bi bi-briefcase-fill"></i>
+            </div>
+            <p class="stats-title">Pekerjaan Utama</p>
+            <p class="stats-number">Petani & Wiraswasta</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="lokasi mt-5">
+  <section class="container" data-aos="fade-up">
     <h2 class="text-center mb-4">Lokasi Dusun Wonosobo I</h2>
-    <div class="ratio ratio-16x9 rounded" style="overflow: hidden;">
-      <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.612836359736!2d110.58463617482207!3d-8.111049291918107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bb1b7e85def01%3A0x76757d7fbc4e6ee3!2sBalai%20Padukuhan%20Wonosobo%20I!5e1!3m2!1sid!2sid!4v1753091230764!5m2!1sid!2sid"
-          style="border:0;" 
-          allowfullscreen="" 
-          loading="lazy" 
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.612836359736!2d110.58463617482207!3d-8.111049291918107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bb1b7e85def01%3A0x76757d7fbc4e6ee3!2sBalai%20Padukuhan%20Wonosobo%20I!5e1!3m2!1sid!2sid!4v1753091230764!5m2!1sid!2sid"
+          width="600"
+          height="450"
+          style="border:0;"
+          allowfullscreen=""
+          loading="lazy"
           referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+    </iframe>
     </div>
-  </div>
-
-</section>
+  </section>
 
   <section id="umkm" class="umkm container" data-aos="fade-up" data-aos-duration="1000">
     <h2 class="text-center mb-4">UMKM Wonosobo I</h2>
