--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
             </div>
           </div>
         </div>
-
-        <p class="mt-3 mb-0"><strong>Pesan Sekarang</strong></p>
-        <strong><a href="https://wa.me/6282208243838" target="_blank" class="icon-link icon-hover">
-          <i class="bi bi-whatsapp text-success"></i> 082208243838</a></strong>
+        <a href="https://wa.me/6282208243838" target="_blank" class="btn btn-success rounded-pill d-inline-flex align-items-center gap-2 mt-4">
+          <i class="bi bi-whatsapp"></i>
+          Pesan Sekarang
+        </a>
       </div>
     </div>
 
@@ -349,10 +349,10 @@
             </div>
           </div>
         </div>
-        <p class="mt-3 mb-0"><strong>Pesan Sekarang</strong></p>
-        <strong><a href="https://wa.me/6282208243838" target="_blank" class="icon-link icon-hover">
-          <i class="bi bi-whatsapp text-success"></i> 082208243838</a></strong>
-        </p>
+        <a href="https://wa.me/6282208243838" target="_blank" class="btn btn-success rounded-pill d-inline-flex align-items-center gap-2 mt-4">
+          <i class="bi bi-whatsapp"></i>
+          Pesan Sekarang
+        </a>
       </div>
     </div>
   </section>
